[metadata]
name = pyomyo
version = 0.0.5
author = PerlinWarp
author_email = PerlinWarp+Myo@gmail.com
description = Python Opensource Myo library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PerlinWarp/pyomyo
project_urls =
    Bug Tracker = https://github.com/PerlinWarp/pyomyo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyserial
    numpy
    matplotlib
    pygame
    scikit-learn
    xgboost
[options.packages.find]
where = src